--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Voronoi</title>
+  <title>Threaded Voronoi</title>
   <style>body{margin:0;padding:0;}</style>
   <script type="module" src="main.js"></script>
 </head>
